Fix footer column-gap related bug

--- a/src/pages/LandingPage/Home/FooterComponent/FooterComponent.module.css
+++ b/src/pages/LandingPage/Home/FooterComponent/FooterComponent.module.css
@@ -80,6 +80,7 @@
   }
   .footer_details {
     width: 100%;
+    column-gap: 1rem;
   }
 }
 
